--- a/styles.css
+++ b/styles.css
@@ -135,7 +135,7 @@ ul.menu a:hover {
   padding-bottom: 40px;
 }
 .servicios h3 {
-  color: #b10c72;
+  color: rgb(141, 20, 141);
 }
 .contenedores-servicios {
   display: flex;
@@ -203,6 +203,10 @@ ul.menu a:hover {
 .contenido-uno h4 {
   font-size: 1.4em;
   margin-bottom: 10px;
+  color: rgb(141, 20, 141);
+}
+.nosotros-dos{
+  background-color: black;
 }
 
 /* --------------------------------------- */
