--- a/styles.css
+++ b/styles.css
@@ -328,12 +328,20 @@ form input {
     color: #fff;
     text-decoration: none;
   }
+
+
 .contacto-parrafo {
   text-align: center;
   margin: 40px auto;
   font-weight: 600;
   width: 80%;
   font-size: 1.2em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.contacto-parrafo img{
+  width: 60%;
 }
 .icons {
   color: #fff;
@@ -577,5 +585,8 @@ footer {
   }
   .nosotros-titulo img{
     width: 40px;
+  }
+  .contacto-parrafo img{
+    width: 90%;
   }
 }
